# river.duxca.com

./: .clinerules  .dockerignore  .github-workflows-deploy-main.yml  .github-workflows-rust-updated.yml  .gitignore  .mcp.json  .rooignore  CLAUDE.md  Cargo.toml  DEPLOY_SETUP.md  Dockerfile  Makefile  README.md  backup_litestream.sh  deploy.bash  docker-compose.yml  download_remote_db.bash  replicate_local__db.bash  reset_local_db.bash  reset_remote_db.bash  restore_litestream.sh  river.db  run_local.bash  rust-toolchain.toml  service.yaml  update_claude_credentials.bash  upload_local_db.bash
.claude/: settings.json
.roo/: mcp.json  rules-Code.md
.sqlx/: query-04cf0f06855b9acf7241392616550e16843df5cf420b2edcdc3f1dffd824a66e.json  query-0b012532a9b5ef3b377ec34091cba839edffda2f217d92c57e9c2005ca7968dd.json  query-218533cfc324d1de27dd0683901c9766e56ec126168589590e14199d12972040.json  query-231869dd617d05b2d8126e4f6ccdc1d703bdb4109ac8efce8b5c149c5a27e7bd.json  query-32ae38fc1865fa57168c92ba102686c1f683b2905a99f0222d202c5a5a916dde.json  query-4314b42fb59e976677ccec2fc0d7994baadd1fef350eb6e5ccf8ac3aeb8637d8.json  query-589678129133a0013611ffc608a8ad53fbea590ccd8301dfb6bf2905dd0fe3d0.json  query-58bde31fc73ae4040298bf1648c957ea9c3911b75a5b64d5a49f555a01a905ea.json  query-5e973a0da92e475b5fa153e8e096b58560818a83ed496d1c3a51b00ece32ae08.json  query-669f92f1df2e0be5301a10e8626c79e58e2ad4e31f11524678d73b184e9263f3.json  query-722e3804562533b8086de560d854b9b66d0a1befd2420e553cda9cf5a0f279f8.json  query-770ac05753c587ba95ba1469d20641c153899401cf9ac6e93eaf96019ddb45e9.json  (+7 more)
app/: Cargo.toml  style.css
app/src/: lib.rs
app/src/pages/: admin.rs  map.rs  mod.rs  static_pages.rs
assets/: field_spot.csv  (+2 more)
browser/: Cargo.toml  index.html
browser/scss/: style.scss
browser/src/: api.rs  main.rs
browser/src/components/: add_river.rs  add_route.rs  add_waypoint.rs  bottom_app_bar.rs  circle_button.rs  dialog.rs  home.rs  login.rs  map.rs  map_component.rs  mod.rs  select_river.rs  sidebar.rs  sidebar_component.rs  user_profile.rs  user_profile_component.rs
browser/src/hooks/: mod.rs
db/: .env  Cargo.toml  README.md  fixed_seed.sql  fixed_seed_test.sql  litestream.yml  river_waypoints.csv  rivers.csv  seed.sql
db/.sqlx/: query-03abda514415c4facb3dac815a73e085991efeaddeb7e21923dc0c8dd9d6a09a.json  query-16f34a37093eecb87f0136b54d8fe9e5dff903837ccd248109c88e2dd15a80f5.json  query-19cc0dcf55863b9e75ac4c5f395d800599020be0ab604aa53d4b55f98e2d205a.json  query-1a21adedd41a4e709bec102e6cb96726d21f431065428662b3aeca8538fb7673.json  query-29e5ee9581a2e33c1a0fcea35c8fea3f8e3496fb1ae89854c63b308a4612f509.json  query-302851f5169ae0dcbeddfb28b3a9c5cd1911a98edc1f828efd4e5c74688799a2.json  query-399c125b00bef90a47186e3578e49f4b417ec3da5f42a931377fd163b47bb8ab.json  query-54f8b7679eaeb02cf940dddba08a019e428f1e302125b413d9bacf294798dd2c.json  query-5cce59c99ee6e49b2987c4d55495149e813c33f7a95b0dc3f334f0cb34f83d5c.json  query-6d06c433de68753af70962d436d2c7873f5f68c9cb41d77c9552eb03c7e65e68.json  query-6e9bfb2ee55c66f257b878d98b8cbc983ca67c6be55a041c476a3b6225c4c328.json  query-770ac05753c587ba95ba1469d20641c153899401cf9ac6e93eaf96019ddb45e9.json  query-7ad67354148862ae7f96b6c919318beade712ff5cefceb08f35b7c6b6b8bb30f.json  query-915c22bf266335414cb6eda6c6c7774f3f03141e3a8f99471ce00b2399320f59.json  query-94c04a61f54f7c09ae5f2281468cd40308991b4e76e61be95f8d5be846e39113.json  query-a48bb60cd1fea943dda7bed632ec9371c10b0b73feab919fb986dad8267d6dc1.json  query-b5b16024b4d2bd6101a883553bb87a4666d808924c285389b1ab788826ab5185.json  query-bbb8a7ef8fd0da2e42e7f1667eecae3a15d1046f7c6f3fc4d42523de7e6e9c31.json  query-cada26dbbb2b7703b218a0e2feba8dd0ac3e3696771a86036244761cec2d2ce4.json  query-df165323d6ecd359f55ab5bbceb75d6e2a75a7e5648aca543b7c8040b7549a44.json
db/migrations/: 20240729163101_users.sql  20240817131736_rivers.sql  20250325184435_rivers_data.sql  20250403020400_files.sql  20260610000000_user_auth_unique_indexes.sql  20260611000000_drop_files.sql  20260612000000_deleted_tables.sql
db/src/: files.rs  lib.rs  river_tracks.rs  river_waypoints.rs  rivers.rs  user.rs
e2e/: Cargo.toml  Dockerfile
e2e/tests/: smoke.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
leptos-browser/: Cargo.toml  index.html  style.css
leptos-browser/src/: lib.rs  main.rs
model/: Cargo.toml
model/src/: field.rs  lib.rs  river.rs  user.rs
model/src/api/: create_river.rs  create_river_track.rs  create_river_waypoint.rs  delete_me.rs  delete_river.rs  delete_river_track.rs  delete_river_waypoint.rs  get_me.rs  get_river.rs  list_access_logs.rs  list_field_spots.rs  list_fields.rs  list_river_waypoints.rs  list_rivers.rs  list_users.rs  mod.rs
server/: .gitignore  Cargo.toml  README.md  build.rs  field.csv  litestream.yml  rivers.csv
server/cli/: download_remote_db.bash  reset_remote_db.bash  run.bash
server/migrations/: 20240729163101_init.sql  20240817131736_rivers.sql  20240830183656_rivers.sql  20240830192016_rivers.sql
server/src/: lib.rs  main.rs
server/src/api/: create_river_waypoint.rs  get_me.rs  list_access_logs.rs  list_field_spots.rs  list_fields.rs  list_river_waypoints.rs  list_rivers.rs  list_users.rs  mod.rs
server/src/auth/: facebook.rs  github.rs  mod.rs  twitter.rs
server/src/db/: field.rs  mod.rs  river.rs  user.rs
server/src/web/: account.rs  admin.rs  api.rs  app.rs  fake_facebook.rs  fake_github.rs  home.rs  image.rs  login.rs  mod.rs  server_fn.rs  ui.rs
server/src/web/login/: facebook.rs  github.rs  mod.rs  twitter.rs
server/templates/: admin.html  login.html
server/tests/: login_integration_test.rs
service/: Cargo.toml
service/src/: create_file.rs  create_river.rs  create_river_track.rs  create_river_waypoint.rs  delete_file.rs  delete_me.rs  delete_river.rs  delete_river_track.rs  delete_river_waypoint.rs  get_file.rs  get_me.rs  get_river.rs  lib.rs  list_access_logs.rs  list_rivers.rs  list_users.rs
shared-api/: Cargo.toml
shared-api/src/: lib.rs
web2/: Cargo.toml  index.html  package-lock.json
web2/src/: main.rs
web2/src/components/: map_component.rs
(+116 files in other folders)
