[workspace]
members = [
    "app",
    "server",
    "model",
    "db",
    "service",
    "shared-api",
    "frontend",
    "e2e",
]
resolver = "2"

[workspace.dependencies]
leptos = { version = "0.8.6", default-features = false }
leptos_axum = { version = "0.8.6" }
leptos_router = { version = "0.8.6", default-features = false }
# exclude = [
#     "material-yew/build",
#     "material-yew/usages"
#  ]

[profile.release]
debug = 1

[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "z"
panic = "abort"

[[workspace.metadata.leptos]]
bin-default-features = false
bin-features = ["local"]
bin-package = "server"
browserquery = "defaults"
end2end-cmd = "./cli/e2e-local-container.sh --no-server"
end2end-dir = "."
lib-default-features = false
lib-features = ["hydrate"]
lib-package = "frontend"
lib-profile-release = "wasm-release"
name = "frontend"
reload-port = 18082
site-addr = "127.0.0.1:18080"
site-pkg-dir = "pkg"
site-root = "target/site"
style-file = "app/style.css"
