[package]
edition = "2021"
name = "browser"
version = "0.1.0"

[features]
local = []

[dependencies]
anyhow = "1.0"
gloo = {version = "0.11.0", features = ["futures"]}
gloo-net = {version = "0.6.0", features = ["json"]}
implicit-clone = "0.5.0"
js-sys = "0.3"
leaflet = "0.4"
model = {path = "../model"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["console", "HtmlElement", "MouseEvent", "DomRect", "HtmlAnchorElement", "console", "Window", "Document", "HtmlSelectElement", "HtmlDivElement"]}
yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}
yew-hooks = "0.3.2"
