[package]
edition = "2024"
name = "db"
version = "0.1.0"

[dependencies]
anyhow = "1"
csv = "1.3.0"
futures = "0.3.30"
log = "0.4.22"
model = { path = "../model", features = ["sql"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "json", "uuid", "migrate"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
env_logger = "0.11.5"

[profile.dev.package.sqlx-macros]
opt-level = 3
