[package]
edition = "2021"
name = "model"
resolver = "2"
version = "0.1.0"

[features]
login = ["axum-login"]
sql = ["sqlx"]

[dependencies]
anyhow = "1"
axum-login = { version = "0.17", optional = true }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.0.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json", "uuid", "migrate"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
frunk = "0.4.3"
frunk_core = "0.4.3"
frunk-enum-core = "0.3"
frunk-enum-derive ="0.3"

[dev-dependencies]
csv = "1.3.0"
