[package]
edition = "2021"
name = "model"
resolver = "2"
version = "0.1.0"

[features]
login = ["axum-login"]
sql = ["sqlx"]
js = ["uuid/js"]


[dependencies]
anyhow = "1"
axum-login = { version = "0.17", optional = true }
derive_more = { version = "2.0.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json", "uuid", "migrate"], optional = true }
uuid = { version = "1", features = ["serde", "v4"] }
