[package]
edition = "2021"
name = "server"
resolver = "2"
version = "0.1.0"

[features]
local = []

[dependencies]
anyhow = "1"
askama = "0.13.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "form", "query", "file-stream", "attachment"] }
axum-jrpc = "0.8.0"
axum-login = "0.17"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.0"
db = { path = "../db" }
dotenvy = "0.15"
env_logger = "0.11.5"
envy = "0.4.2"
futures = "0.3.30"
google-cloud-auth = "0.17"
google-cloud-storage = "0.24"
log = "0.4.22"
mime = "0.3"
model = { path = "../model", features = ["sql", "login"] }
oauth2 = { version = "5.0", features = ["pkce-plain"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service = { path = "../service" }
shadow-rs = "1.1.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json", "uuid", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "compression-zstd", "cors", "fs"] }
tower-sessions = { version = "0.14.0", features = ["signed", ] }
tower-sessions-core = { version = "0.14.0", features = ["deletion-task"] }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower_governor = "0.7"
tracing = "0.1"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "time", "local-time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "http1", "client-legacy"] }
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
shadow-rs = "1.1.1"
