[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
db = { path = "../db" }
log = "0.4.22"
model = { path = "../model" }
sqlx = { version = "0.8.6", features = ["sqlite"] }
tracing = "0.1"

[dev-dependencies]
http = "1.4.2"
tokio = { version = "1.0", features = ["full", "test-util"] }
