[package]
edition = "2024"
name = "shared-api"
version = "0.1.0"

[features]
default = []
hydrate = ["leptos/hydrate", "model/js"]
ssr = ["leptos/ssr", "dep:service", "dep:sqlx"]

[dependencies]
leptos = { workspace = true, default-features = false }
model = { path = "../model" }
service = { path = "../service", optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"], optional = true }
