[package]
edition = "2021"
name = "web2"
version = "0.1.0"

[dependencies]
gloo-console = "0.2"
gloo-net = "0.2"
gloo-utils = "0.1"
implicit-clone = "0.3.6"
leaflet = "0.4"
serde = {version = "1.0", features = ["derive"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}

[dependencies.web-sys]
features = [
  "console",
  "HtmlElement",
  "MouseEvent",
  "DomRect",
  "HtmlAnchorElement",
  "console",
  "Window",
  "Document",
]
version = "0.3"
